@@ -38,6 +38,9 @@ public:
 
 	MediaData mediaData() { return md; };
 
+	int mplayerVersion() { return mplayer_svn; };
+	bool isMplayerAtLeast(int svn_revision);
+
 signals:
 	void processExited();
 	void lineAvailable(QString line);
@@ -76,6 +79,8 @@ private:
 	MediaData md;
 
 	int last_sub_id;
+
+	int mplayer_svn;
 };
 
 
